stacks/k3s/manifests/proxmox-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: ingress-external
spec:
  ports:
    - port: 8006
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: ingress-external
subsets:
  - addresses:
      - ip: 192.168.1.90
    ports:
      - port: 8006
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: proxmox-headers
  namespace: ingress-external
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-For: ""
      X-Real-IP: ""
    customResponseHeaders:
      Set-Cookie: ""
    accessControlAllowOriginList:
      - "https://proxmox.home.lab"
    accessControlAllowHeaders:
      - "CSRFPreventionToken"
      - "Authorization"
      - "Content-Type"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  namespace: ingress-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`proxmox.home.lab`)
      kind: Rule
      services:
        - name: proxmox-external
          port: 8006
          scheme: https
          serversTransport: proxmox-transport
          sticky:
            cookie:
              name: proxmox_sticky
              secure: true
              httpOnly: true
